data/derived/sp14/progs/unify/prog4768.ml.out
Characters 81-82:
  | Sine e -> sin(pi*. e)
                       ^
Error: This expression has type expr but an expression was expected of type
         float
